err.txt
output.c:336:1: warning: control reaches end of non-void function [-Wreturn-type]
}
^
output.c:339:10: error: use of undeclared identifier '__tmp0'
color = (__tmp0);
         ^
output.c:340:10: error: use of undeclared identifier '__tmp3'
count = (__tmp3);
         ^
1 warning and 2 errors generated.
